<resources>
    <string name="app_name">ChickCheck</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_scan">Pindai</string>
    <string name="analyze">Analisis</string>
    <string name="welcome_desc">Ayo periksa ayam Anda hari ini!</string>
    <string name="welcome_title">Halo, %s!</string>
    <string name="articles_title">Artikel</string>
    <string name="article_desc">Pelajari lebih lanjut tentang penyakit ayam</string>
    <string name="location_not_found">Tidak ada lokasi yang ditemukan</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Daftar</string>
    <string name="logout_button">Logout Button</string>
    <string name="my_scan_title">Hasil Pemindaian</string>
    <string name="your_scan_desc">Riwayat terbaru dari pemindaian gambar Anda</string>
    <string name="empty_image">Empty Image</string>
    <string name="scan_now">Pindai Sekarang</string>
    <string name="empty_scan_data">Kamu belum memindai gambar!</string>
    <string name="title_article">Artikel</string>
    <string name="logo_image">Logo</string>
    <string name="title_profile">Profile</string>
    <string name="button_logout">Button Logout</string>

    <string name="content_example">
        Bullies come in all shapes and sizes. Nobody deserves to be bullied, but many of us deal with them over time, often as children. Either way, when you find yourself being bullied, there are many steps you can take to stop the behavior. Read on for a comprehensive list of tips on dealing with bullies, from standing up for yourself to walking away and improving your self-confidence.
    </string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Password</string>
    <string name="desc_dont_have_any_account">Belum mempunyai akun?</string>
    <string name="title_scan_history">Riwayat Pemindaian</string>
    <string name="total_histories">Total Riwayat: %s</string>
    <string name="you_don_t_have_any_history">Kamu belum memindai gambar!</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="already_have_an_account">Sudah mempunyai akun?</string>
    <string name="address_example">Pertokoan Nakula Plaza, Jl. Nakula Blok C, Legian, Kec. Kuta, Kabupaten Badung, Bali 80361, Indonesia</string>
    <string name="distance_example">100 km</string>
    <string name="cause_example">Nama virus/bakteri</string>
    <string name="title_result_photo">Hasil Foto</string>
    <string name="result_photo_description">Hasil Foto</string>
    <string name="veterinarian_title">Klinik hewan terdekat</string>
    <string name="veterinarian_subtitle">Cari klinik hewan didekatmu</string>
    <string name="scan_again">Scan Lagi</string>
    <string name="expand_nearby_location">expand nearby location</string>
    <string name="icon_nearby_place">icon nearby place</string>
    <string name="expand_symptoms">expand symptoms</string>
    <string name="icon_symptoms">icon symptoms</string>
    <string name="expand_prevention">expand prevention</string>
    <string name="icon_prevention">icon prevention</string>
    <string name="expand_treatment">expand treatment</string>
    <string name="icon_treatment">icon treatment</string>
    <string name="expand_information">expand information</string>
    <string name="icon_information">icon information</string>
    <string name="button_back_to_home">button back to home</string>
    <string name="disease_picture">disease picture</string>
    <string name="galeri">Galeri</string>
    <string name="switch_camera">switch camera</string>
    <string name="scanning">Scanning...</string>
    <string name="capture_image">capture image</string>
    <string name="button_gallery">button gallery</string>
    <string name="artikel">Artikel</string>
    <string name="learn_more_about_chicken_diseases">Pelajari lebih lanjut mengenai penyakit ayam</string>
    <string name="arahkan_pada_kotoran_ayam_dan_ambil_gambar">Arahkan pada kotoran ayam dan ambil gambar</string>
</resources>